// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders with style provided 1`] = `
<div
  class="dse-container"
  data-testid="container"
  style="border: 1px solid black;"
>
  <div />
</div>
`;

exports[`Container renders with text content 1`] = `
<div
  class="dse-container"
  data-testid="container"
>
  <div />
</div>
`;
